<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorRed"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        tools:targetApi="lollipop" />

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/status_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/carStatus"
        android:textColorHint="@color/colorRed" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorRed"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btnDeletePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/colorRed"
        android:hint="@string/delete"
        android:textColorHint="@color/colorWhite" tools:targetApi="lollipop" />

</LinearLayout>