<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.hyperdesign.alabbadauto.fragments.addVehicle.AddVehicleFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/llAddVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--<de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/addImageVehicle"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_add_photo"
            android:layout_gravity="center"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorWhite"/>-->

        <ImageView
            android:id="@+id/addVehicleImage"
            android:layout_width="118dp"
            android:layout_height="109dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/placeholder"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_red_photo" />

        <EditText
            android:id="@+id/vehicleName"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorRed"
            android:hint="@string/carName"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addVehicleImage"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/vehicleDescription"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorRed"
            android:hint="@string/carDescription"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleName"
            tools:targetApi="lollipop" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/category_search"
            android:textColorHint="@color/colorRed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleDescription"
            app:met_floatingLabel="normal" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/brands_spinner"
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/brand_search"
            android:textColorHint="@color/colorRed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_spinner"
            app:met_floatingLabel="normal" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/model_spinner"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/model_search"
            android:textColorHint="@color/colorRed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brands_spinner"
            app:met_floatingLabel="normal" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/year_spinner"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/carYear"
            android:textColorHint="@color/colorRed"
            app:layout_constraintBaseline_toBaselineOf="@+id/status_spinner"
            app:layout_constraintEnd_toStartOf="@+id/status_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:met_floatingLabel="normal" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/status_spinner"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/carStatus"
            android:textColorHint="@color/colorRed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/year_spinner"
            app:layout_constraintTop_toBottomOf="@+id/model_spinner"
            app:met_floatingLabel="normal" />

        <RadioGroup
            android:id="@+id/radio_type_search"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_spinner">

            <RadioButton
                android:id="@+id/radio_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="125dp"
                android:checked="true"
                android:text="@string/carTypeNew"
                android:textColorHint="@color/colorRed"
                android:theme="@style/MyRadioButton"
                app:layout_constraintBaseline_toBaselineOf="@+id/radio_used"/>

            <RadioButton
                android:id="@+id/radio_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="85dp"
                android:layout_marginTop="4dp"
                android:text="@string/carTypeUsed"
                android:textColorHint="@color/colorRed"
                android:theme="@style/MyRadioButton"
                app:layout_constraintEnd_toEndOf="parent"/>

        </RadioGroup>

        <Button
            android:id="@+id/nextToPrice"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorRed"
            android:hint="@string/next"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.927"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_type_search"
            app:layout_constraintVertical_bias="0.0" tools:targetApi="lollipop" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
